--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,13 @@ pyzmq>=15.2.1
 # webull>=0.0.9
 pymongo>=3.11.3
 mongoengine>=0.23.0
-pip~=20.1
+pip>=21.2.4
 wheel~=0.34.2
 cryptography~=2.9.2
 py~=1.8.1
 lxml~=4.5.0
 setuptools~=41.2.0
-TA-Lib>=0.4.18
+TA-Lib>=0.4.21
 python-telegram-bot>=12.7
 paho-mqtt>=1.5.1
 git+git://github.com/imvinaypatil/webull.git@slave
-# git+git://github.com/tedchou12/webull.git
