--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ pymongo>=3.11.3
 mongoengine>=0.23.0
 pip>=21.2.4
 wheel~=0.34.2
-cryptography~=2.9.2
+cryptography>=3.2
 py>=1.10.0
-lxml~=4.5.0
+lxml>=4.6.3
 setuptools~=41.2.0
 TA-Lib>=0.4.21
 python-telegram-bot>=12.7
