--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-python-dateutil>=2.5.3
-numpy>=1.11.1
-pandas>=0.22.0
-pytz>=2016.6.1
-requests>=2.10.0
-pyzmq>=15.2.1
-# webull>=0.0.9
-pymongo>=3.11.3
-mongoengine>=0.23.0
-pip>=21.2.4
-wheel~=0.34.2
-cryptography>=3.2
-py>=1.10.0
-lxml>=4.6.3
-setuptools~=41.2.0
-TA-Lib>=0.4.21
-python-telegram-bot>=12.7
-paho-mqtt>=1.5.1
+python-dateutil
+numpy
+pandas
+pytz
+requests
+pyzmq
+pymongo
+mongoengine
+pip
+wheel
+cryptography
+py
+lxml
+setuptools
+TA-Lib
+python-telegram-bot
+paho-mqtt
 git+git://github.com/imvinaypatil/webull.git@slave
