docker: add instructions

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
   blotter:
-    image: kinetick:blotter-1.0.0
+    image: kinetick:blotter
     restart: always
     environment:
       - zmqport=12345
       - zmqtopic=qtpy_blotter_topic
       - symbols=/tmp/cache/symbols.csv
-      - dbhost=""
+      - dbhost="localhost"
       - dbport=27017
       - dbuser=""
       - dbpassword=""
@@ -18,18 +18,19 @@ services:
       - "symdata:/tmp/cache"
 
   strategy:
-    image: kinetick:strategy-1.0.0
+    image: kinetick:strategy
     restart: always
     environment:
       - zmqport=12345
       - zmqtopic=qtpy_blotter_topic
       - symbols=/tmp/cache/symbols.csv
       - zmq_connection_string=tcp://blotter:12345
-      - dbhost=""
+      - dbhost="localhost"
       - dbport=27017
       - dbuser=""
       - dbpassword=""
       - dbname=kinetick
+      - dbskip=true
       - zerodha_user=""
       - zerodha_password=""
       - zerodha_pin=""
@@ -38,10 +39,9 @@ services:
       - initial_margin=1000
       - risk2reward=1.2
       - risk_per_trade=100
+      - resolution=1m
     volumes:
       - "symdata:/tmp/cache"
 
 volumes:
   symdata:
-  strategy:
-    external: true
