--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ setuptools
 TA-Lib
 python-telegram-bot
 paho-mqtt
-git+https://github.com/imvinaypatil/webull.git@v1.1.1
+git+https://github.com/imvinaypatil/webull.git
